--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~7.2.0",
     "@types/leaflet": "^1.4.4",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.5.1",
     "rxjs": "~6.3.3",
